2009-03-18  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Replace IcedTea6 with IcedTea7.

2009-03-18  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Enable new PR39408 patch when bug is
	found in gjavah by configure.
	* acinclude.m4:
	(IT_CP39408_JAVAH): Add classpath specification
	to JAVAC invocation to handle buggy ecjs.
	* patches/ecj/icedtea-pr39408.patch:
	New patch to fix build failure when PR39408
	is present in gjavah.

2009-03-17  Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	(IT_CP39408_JAVAH): New test for Classpath
	bug 39408.
	* configure.ac: Enable new test.  Result
	as yet unused.

2009-03-17  Andrew John Hughes  <ahughes@redhat.com>

	* overlays/nio2/openjdk/jdk/src/share/classes/java/nio/file/attribute/NamedAttributeView.java,
	* overlays/nio2/openjdk/jdk/src/share/classes/sun/nio/ch/AsynchronousFileLockImpl.java,
	* overlays/nio2/openjdk/jdk/src/share/classes/sun/nio/fs/AbstractNamedAttributeView.java,
	* overlays/nio2/openjdk/jdk/src/solaris/classes/sun/nio/fs/LinuxNamedAttributeView.java,
	* overlays/nio2/openjdk/jdk/src/solaris/classes/sun/nio/fs/SolarisNamedAttributeView.java,
	* overlays/nio2/openjdk/jdk/src/windows/classes/sun/nio/fs/WindowsNamedAttributeView.java,
	* overlays/nio2/openjdk/jdk/test/java/nio/file/attribute/NamedAttributeView/Basic.java:
	Removed; in b50 (renamed as in b99).
	* patches/security/icedtea-6721753.patch: Removed; in b50.
	* Makefile.am: Remove security patch.
	* overlays/nio2/openjdk/jdk/src/share/classes/java/io/Inputs.java,
	* overlays/nio2/openjdk/jdk/src/share/classes/java/io/Outputs.java,
	* overlays/nio2/openjdk/jdk/src/share/demo/nio/ZipFileSystem/com/sun/nio/zipfs/ZipFileSystem.java:
	Updated to nio2 b99.
	* patches/icedtea-nio2.patch: Recreated against b50.
	* patches/icedtea-pr261.patch: Likewise.

2009-03-06  Andrew John Hughes  <ahughes@redhat.com>

	* overlays/nio2/openjdk/jdk/make/mksample/nio/file/Makefile,