@@ -1,3 +1,8 @@
+2009-03-19  Andrew John Hughes  <ahughes@redhat.com>
+
+	* Makefile.am:
+	Fix issues that break make distcheck.
+
 2009-03-18  Andrew John Hughes  <ahughes@redhat.com>
 
 	* Makefile.am:
